# mta

./: .gitignore  LICENSE  MANIFEST.in  README.md  mca.ipynb  mca.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
data/: data.csv
mta/: __init__.py  mta.py  mta_spark.py  shao_user_level_output.py
mta.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_custom_separator.py  test_data_loading.py  test_heuristic_models.py  test_initialization.py  test_normalization_config.py  test_optional_exposure_times.py  test_probabilistic_models.py  test_public_api.py  test_results.py  test_shapley.py
