[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mta"
version = "0.0.8"
description = "Multi-Touch Attribution Models for Marketing Analytics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Igor Korostil", email = "eeghor@gmail.com"}
]
keywords = ["attribution", "marketing", "multi-touch", "analytics", "markov", "shapley"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "scikit-learn>=0.24.0",
    "arrow>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/eeghor/mta"
Issues = "https://github.com/eeghor/mta/issues"
